# first-game

./: .gitignore  Cargo.toml  README.md  notes.txt
assets/shaders/: grass_shader.wgsl  tree_shader.wgsl
src/: main.rs
src/entities/: enemy.rs  grass.rs  mod.rs  player.rs  poi.rs  projectiles.rs  terrain.rs  tile.rs  tree.rs  util.rs
src/util/: audio.rs  camera.rs  gravity.rs  lighting.rs  mod.rs  perlin.rs  render_state.rs
