[package]
name = "first-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# remember to revert dynamic_linking before game release
bevy = { version = "0.13.1", features = ["dynamic_linking", "trace"] }
bevy_rapier3d = {version="0.25.0", features=["debug-render-3d"]}
futures-lite = "1.4.0"
bevy-inspector-egui = "0.23.3"
bevy_atmosphere = "0.9"
bytemuck = "1.15.0"
noise = "0.8.2"
rand = "0.8.5"

[profile.release]
debug = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 3

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

